stanzas/pagination-table/style.scss
/* ... */
// transition
.modal-enter-from,
.modal-leave-to {
  opacity: 0;
  margin-top: -20px;
}

.modal-enter-active,
.modal-leave-active {
  transition: opacity 0.4s, margin-top 0.4s;
}

.modal_bg-enter-from,
.modal_bg-leave-to {
  opacity: 0;
}

.modal_bg-enter-active,
.modal_bg-leave-active {
  transition: opacity 0.4s;
}

.no-data {
  text-align: center;
  font-size: var(--togostanza-control-font-size);
  color: var(--togostanza-control-font-color);
  padding-top: 1em;
}

